default image on url error, added endpoint filter for tablet, filter styles fixes, changed the size of the datepicker dropdown, hide recent searches when searched, border right for the image in the main card, fit filter size to the longer option text, navbar z-index, font weight for endpoint filter in the searchbox, nodata responsiveness

--- a/dispatcher-client/src/css/index.css
+++ b/dispatcher-client/src/css/index.css
@@ -19,3 +19,10 @@
   font-family: 'Mulish', 'Roboto', sans-serif;
   font-weight: 400;
 }
+
+.PrivatePickersSlideTransition-root {
+  min-height: 195px !important;
+  @media only screen and (min-width: 769px) {
+    min-height: 180px !important;
+  }
+}
